# SCALR

./: CMakeLists.txt  README.md  grammar_validator.py  scalr_gui.py  scalr_gui2 (2).py  scalr_gui2.py
include/: CLR1.hpp  ExampleGenerator.hpp  JsonExporter.hpp  LALR1.hpp  LR0.hpp  LRCommon.hpp  Lexer.hpp  MetaParser.hpp  ParserSimulator.hpp  SLR1.hpp  SetGenerator.hpp  Shared_Structs.hpp
src/: ExampleGenerator.cpp  JsonExporter.cpp  LRCommon.cpp  Lexer.cpp  ParserSimulator.cpp  SLR1.cpp  SetGenerator.cpp  main.cpp
